# insights-content-template-renderer

./: .dockerignore  DoT.py  Dockerfile  LICENSE  README.md  app.py  build_deploy.sh  config-dev.yml  config.json  config.yml  docker_config.json  docker_config.yml  logger.py  logging.yml  logging_config.json  main.py  pr_check.sh  request_data_example.json  requirements.txt  run.sh  setup.cfg  setup.py  utils.py  utils_test.py
.github/workflows/: bdd.yml  build.yml  test.yml
.tekton/: content-renderer-pull-request.yaml  content-renderer-push.yaml  insights-content-template-renderer-izfa-pull-request.yaml  insights-content-template-renderer-izfa-push.yaml
app/: DoT.py  logger.py  main.py  utils.py
app/tests/: utils_test.py
dashboards/: grafana-dashboard-insights-content-template-renderer.configmap.yaml
deploy/: clowdapp.yaml  test.yaml
docs/: deployment.md
insights_content_template_renderer/: DoT.py  __init__.py  data.py  endpoints.py  logging_sentry.py  logging_utils.py  main.py  models.py  sentry.py  utils.py
insights_content_template_renderer/data/: content_example.json  request_data_example.json  response_data_example.json
insights_content_template_renderer/tests/: DoT_test.py  request_data_example.json  test_endpoints.py  test_metrics.py  test_models.py  utils_test.py
