[metadata]
name = insights-content-template-renderer
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
home-page = https://github.com/JiriPapousek/insights-content-template-renderer

[pycodestyle]
max-line-length = 100
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/,
    samples/,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    docs,
    .venv,
    venv,
    app/DoT.py