[metadata]
name = insights-content-template-renderer
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
home-page = https://github.com/JiriPapousek/insights-content-template-renderer
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9.7

[pycodestyle]
max-line-length = 100
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/,
    samples/,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    docs,
    .venv,
    venv,
    app/DoT.py